Fix z-index issue with menus, caused by previous commit

--- a/app/javascript/styles/_index.scss
+++ b/app/javascript/styles/_index.scss
@@ -518,6 +518,10 @@ html {
   }
 }
 
+.FlowItemMenu {
+  z-index: 3;
+}
+
 .FlowItemMenuActivator {
   display: inline-block;
   left: 157px;
